# horcrux_box

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  prj.conf  west.yml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/workflows/: build.yml  pages.yml  release.yml
apsta_mode/: CMakeLists.txt  prj.conf  west.yml
apsta_mode/.devcontainer/: Dockerfile
apsta_mode/src/: main.c
apsta_mode/src/access-point/assets/: index.html  page_captive.h  style.css
apsta_mode/src/access-point/http/inc/: http_router.h
apsta_mode/src/access-point/http/src/: http_router.c  http_server.c
apsta_mode/src/access-point/inc/: dhcp.h  dns.h  handlers.h  http_server.h  router.h  wifi_mgr.h
apsta_mode/src/access-point/net/src/: dhcp.c
apsta_mode/src/access-point/src/: dhcp.c  dns.c  handlers.c  http_server.c  router.c  wifi_mgr.c
apsta_mode/src/access-point/wifi/src/: wifi_mgr.c
apsta_mode/tools/: download-blobs.sh  host-flash.sh
demo/: .gitignore  CMakeLists.txt  Makefile  README.md  flash.html  style.css
demo/src/: main.c  sys_rand_stub.c
demo/src/stubs/zephyr/random/: random.h
horcrux-connect/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
horcrux-connect/.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
horcrux-connect/doc/: contribution.md
horcrux-connect/nxp/: overlay_rw612.conf
horcrux-connect/socs/: esp32_procpu.conf
horcrux-connect/src/: main.c
horcrux-connect/src/access-point/assets/: index.html  page_captive.h  split.html  style.css  unsplit.html
horcrux-connect/src/access-point/http/inc/: http_handlers.h  http_server.h  http_types.h
horcrux-connect/src/access-point/http/src/: http_handlers.c  http_router.c  http_server.c  http_types.c
horcrux-connect/src/access-point/net/inc/: dhcp.h
horcrux-connect/src/access-point/wifi/inc/: wifi_mgr.h
horcrux-connect/src/sss/: sss.h
horcrux-connect/tests/: CMakeLists.txt  main.cpp  test_sss.cpp
horcrux-connect/tools/: embed-assets.py  flash-esp32s3-jtag.gdb  flash-esp32s3-jtag.sh  host-flash.sh
horcrux-demo/: CMakeLists.txt  Makefile  README.md  index.html
horcrux-demo/scripts/: app.js
horcrux-demo/src/: demo_sss.h
horcrux-hardware/: README.md
src/access-point/assets/: page_captive.h  split.html  style.css
src/access-point/assets/scripts/: split.js  unsplit.js
src/access-point/http/inc/: http_handlers.h  http_router.h  http_server.h  http_types.h
src/access-point/http/src/: http_handlers.c  http_router.c  http_types.c
src/access-point/net/inc/: dns.h
src/access-point/net/src/: dns.c
src/access-point/wifi/src/: wifi_mgr.c
src/sss/: sss.c
tests/mockup/: sys_rand_stub.c
tests/stubs/zephyr/random/: random.h
tools/: embed-assets.py  flash-esp32s3-jtag.gdb  flash-esp32s3-jtag.sh  host-flash.sh
